--- a/stack.yaml
+++ b/stack.yaml
@@ -17,8 +17,8 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/18/17.yaml
+resolver: lts-18.18
+  # url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/18/17.yaml
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -36,14 +36,15 @@ packages:
 # forks / in-progress versions pinned to a git hash. For example:
 #
 extra-deps:
-  - unix-2.7.2.2
+  - split-0.2.3.4
+  - process-1.6.9.0
 # - acme-missiles-0.3
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-extra-deps: [ 
-  unix-2.7.2.2
-  ]
+# extra-deps: [ 
+#   split-0.2.3.4
+#   ]
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
