--- a/teatimer.cabal
+++ b/teatimer.cabal
@@ -43,5 +43,7 @@ executable teatimer-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , process
+    , split
     , teatimer
   default-language: Haskell2010
