--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,9 @@ description:         Please see the README on GitHub at <https://github.com/0xmy
 
 dependencies:
 - base >= 4.7 && < 5
+- split
+- containers
+- process
 
 library:
   source-dirs: src
@@ -34,6 +37,15 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
+      teatimer
+
+tests:
+  teatimer-test:
+    main:                Spec.hs
+    source-dirs:         test
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
     - teatimer
-    - split
-    - process
