--- a/package.yaml
+++ b/package.yaml
@@ -1,35 +1,28 @@
-name:                teatimer
+name:                simple-teatimer
 version:             0.1.0.0
-github:              "0xmycf/teatimer"
-license:             BSD3
+github:              "0xmycf/simple-simple-teatimer"
+license:             MIT
 author:              "0xmycf"
 maintainer:          "mycf.mycf.mycf@gmail.com"
 copyright:           "2021 0xmycf"
 
 extra-source-files:
 - README.md
-- ChangeLog.md
 
-# Metadata used when publishing your package
-# synopsis:            Short description of your package
-# category:            Web
-
-# To avoid duplicated efforts in documentation and dealing with the
-# complications of embedding Haddock markup inside cabal files, it is
-# common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/0xmycf/teatimer#readme>
+description:         Please see the README on GitHub at <https://github.com/0xmycf/simple-teatimer#readme>
 
 dependencies:
 - base >= 4.7 && < 5
 - split
 - containers
+- mtl
 - process
 
 library:
   source-dirs: src
 
 executables:
-  teatimer-exe:
+  simple-teatimer-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -37,15 +30,5 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-      teatimer
+      simple-teatimer
 
-tests:
-  teatimer-test:
-    main:                Spec.hs
-    source-dirs:         test
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - teatimer
