--- a/simple-teatimer.cabal
+++ b/simple-teatimer.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.6.
+-- This file has been generated from package.yaml by hpack version 0.35.1.
 --
 -- see: https://github.com/sol/hpack
 
@@ -24,18 +24,43 @@ source-repository head
 
 library
   exposed-modules:
+      BrickImpl
       GongDaoBei
+      Json
+      UI.Attributes
+      UI.BrewingMenu
+      UI.CustomFormPage
+      UI.CustomMenu
+      UI.Glue
+      UI.MainMenu
+      UI.UIState
+      Util
   other-modules:
       Paths_simple_teatimer
   hs-source-dirs:
       src
+  default-extensions:
+      TemplateHaskell
+      OverloadedStrings
+  ghc-options: -Wall
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , brick
+    , bytestring
     , containers
+    , directory
+    , filepath
+    , microlens-aeson
+    , microlens-platform
     , mtl
+    , optparse-applicative
     , process
     , split
-  default-language: Haskell2010
+    , text
+    , vector
+    , vty
+  default-language: GHC2021
 
 executable simple-teatimer-exe
   main-is: Main.hs
@@ -43,12 +68,26 @@ executable simple-teatimer-exe
       Paths_simple_teatimer
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  default-extensions:
+      TemplateHaskell
+      OverloadedStrings
+  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -O2
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , brick
+    , bytestring
     , containers
+    , directory
+    , filepath
+    , microlens-aeson
+    , microlens-platform
     , mtl
+    , optparse-applicative
     , process
     , simple-teatimer
     , split
-  default-language: Haskell2010
+    , text
+    , vector
+    , vty
+  default-language: GHC2021
