--- a/stack.yaml
+++ b/stack.yaml
@@ -1,8 +1,5 @@
-resolver: lts-18.18
-
+resolver: lts-20.11
 packages:
 - .
-
 extra-deps:
-  - split-0.2.3.4
-  - process-1.6.9.0
+  - aeson-2.0.3.0
